# NoName

./: .gitignore  Cargo.toml  README.md  biome.json  diesel.toml  example.env  next.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
backend/: Cargo.toml
backend/src/: endpoints.rs  main.rs
backend/src/auth/: discord.rs  invalidater.rs  mod.rs  state.rs  twitter.rs
backend/src/ws/: hash_verifier.rs  jwt.rs  mod.rs  utils.rs
backend/src/ws/models/: mod.rs  request.rs  response.rs  sessions.rs  shared.rs
backend/src/ws/redis_ops/: getter.rs  mod.rs  pubsub.rs  store.rs
backend/src/ws/request_handlers/: flappy.rs  mod.rs  snake.rs  start_connection.rs  tetris.rs  two048.rs
backend/src/ws/server/: events.rs  handler.rs  interface.rs  mod.rs  responder.rs  work.rs
backend/src/ws/validator/: consts.rs  flappy.rs  mod.rs  snake.rs  tetris.rs  two048.rs
bots/: Cargo.toml
bots/src/: discord.rs  telegram.rs
db/: Cargo.toml
db/src/: lib.rs  schema.rs
db/src/migrations/2025-03-27-202731_users/: up.sql
db/src/migrations/2025-07-14-134254_social/: down.sql  up.sql
db/src/migrations/2025-07-20-100607_tasks/: down.sql  up.sql
db/src/migrations/2025-09-11-152840_unified_game/: down.sql  up.sql
db/src/migrations/2025-09-11-153343_referral/: down.sql  up.sql
db/src/models/: flappy_score_events.rs  game_sessions.rs  mod.rs  raw_sqls.rs  referral_rewards.rs  referrals.rs  snake_food_events.rs  task_completion.rs  tasks.rs  tetris_snapshots.rs  two048_move_events.rs  user_socials.rs  users.rs
src/app/: layout.tsx
src/app/2048/: page.tsx
src/app/flappy/: page.tsx
src/app/games/: page.tsx
src/app/home/: page.tsx
src/app/leaderboard/: page.tsx
src/app/profile/: page.tsx
src/app/snake/: page.tsx
src/app/tasks/: page.tsx
src/app/tetris/: page.tsx
src/components/: Flappy.tsx  Snake.tsx  Tasks.tsx  Two048.tsx  UnifiedWalletFlow.tsx  WalletChooserModal.tsx  WsWrapper.tsx
src/components/Leaderboard/: Leaderboard.tsx  MiniLeaderboard.tsx
src/components/Profile/: Activity.tsx  (+3 more)
src/hooks/: disconnectWallets.ts  noZoom.ts  useProgram.tsx
src/lib/: tetrisLogic.ts  userRank.ts  utils.ts
task_adder/: Cargo.toml
task_adder/src/: main.rs
(+12 files in other folders)
