[workspace]
members = ["backend", "bots", "db", "task_adder"]

resolver = "2"

[workspace.dependencies]
anyhow = "1.0.102"
bots = { path = "bots" }
chrono = "0.4.45"
db = { path = "db" }
diesel = { version = "2.3.10", features = ["chrono"] }
diesel-async = { version = "0.9.2", features = ["bb8", "postgres"] }
redis = {
  version = "1.2.4",
  features = [
    "connection-manager",
    "tokio-comp",
    "tokio-rustls-comp",
  ]
}
serde = "1.0.228"
serde_json = "1.0.150"
shared = { path = "shared" }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
ulid = "1.2.1"

[profile.dev]
debug = 0
